# VUES---Validation-Utility-Engine-Survey

./: .dockerignore  .env.example  .gitignore  0  1MB  5MB  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATE_SHORTCUT.bat  Dockerfile  INFRA.md  INSTALL.bat  INSTALL_TASK.bat  LICENSE  MEMORY.md  MEMORY_new_entry.md  MEMORY_rest.txt  MEMORY_temp.md  README.md  RELEASE.md  RELEASE_v7.md  SCOUT_TASKS_CONFIRMED_WORKING.md  SCOUT_TASKS_FLAWLESS.md  SCOUT_TASK_FIX.md  SETUP_AUTOSTART.ps1  START_LIVE_DASHBOARD.bat  ScoutCompletionSync_Updated.xml  ScoutDownloader10AM.xml  ScoutDownloader10AM_Fixed.xml  ScoutDownloader3PM.xml  ScoutDownloader3PM_Fixed.xml  VUED-SiteOwl-Workspace.code-workspace  _audit_final.py  _awaiting_cei.txt  _cei_investigation.txt  _check_assign.py  _check_awaiting_scout.py  _check_original_vendor.py  _check_sql_submissions.py  (+123 more)
agents/: .project-config.json  Integrity_Marshal.md  README.md  airtable.md  architect.md  chiefmaxim.md  code-puppy.md  docker-platform-engineer.md  element-llm-gateway.md  generator.md  git-truth-guard.md  grading-authority.md  relayops-coordinator.md  reviewer.md  share-puppy.md  siteowlqa-dev.md  specialist-output-validator.md  system-bottleneck-auditor.md
audits/: 2026-04-28-vues-viewer-data-integrity-audit.md  2026-05-01-analytics-vendor-mapping-audit.md  2026-05-04-vues-stale-data-live-architecture-audit.md  2026-05-05-survey-routing-integrity-audit.md  2026-05-05-vues-routing-reaudit.md
docs/: ADMIN.md  FORCE_SECTION_GUIDE.md  GRADING_ARCHITECTURE.md  INSTALL_GUIDE.md  LIVE_DASHBOARD_GUIDE.md  RELEASE.md  ui.md  (+16 more)
(+339 files in other folders)
