[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siteowlqa"
version = "1.2.0"
description = "SiteOwlQA automation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyairtable>=2.3.3",
  "pandas>=2.2.0",
  "openpyxl>=3.1.2",
  "pyodbc>=5.1.0",
  "requests>=2.31.0",
  "httpx>=0.27.0",
  "pydantic-ai>=0.0.24",
  "openai>=1.51.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
bigquery = [
  "google-cloud-bigquery>=3.11.0",
  "google-auth>=2.28.0",
  "db-dtypes>=1.2.0",  # required by bigquery.to_dataframe()
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
